Different types of problems' short names support